--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -27,13 +27,21 @@ jobs:
         with:
           ref: main # 主分支为 main 分支
 
-      # Runs a single command using the runners shell
-      - name: Run a one-line script
-        run: echo Hello, world!
-
       # Runs a set of commands using the runners shell
       - name: prepare environment
+        env:
+            ACTION_DEPLOY_KEY: ${{ secrets.SECRET_KEY }}
         run: |
-          git clone https://github.com/smpower/test-action.src.git __src__
+          mkdir -p ~/.ssh/
+          echo "$SECRET_KEY" > ~/.ssh/id_rsa
+          chmod 700 ~/.ssh
+          chmod 600 ~/.ssh/id_rsa
+          ssh-keyscan github.com >> ~/.ssh/known_hosts
+          git config --global user.email "rf.wangchn@foxmail.com"
+          git config --global user.name "ruofei"
+          git clone git@github.com:smpower/test-action-src.git __src__
           mv ./source ./__src__ && cd __src__
+          cd __src__
+          npm install hexo-cli -g
           npm i
+          ls -al
