--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -28,9 +28,9 @@ jobs:
           ref: main # 主分支为 main 分支
 
       # Runs a set of commands using the runners shell
-      - name: prepare environment
+      - name: 拉取 Hexo 博客配置文件
         env:
-            ACTION_DEPLOY_KEY: ${{ secrets.SECRET_KEY }}
+            SECRET_KEY: ${{ secrets.SECRET_KEY }}
         run: |
           mkdir -p ~/.ssh/
           echo "$SECRET_KEY" > ~/.ssh/id_rsa
